[gd_scene load_steps=5 format=3 uid="uid://bheddn7ywomo6"]

[ext_resource type="Script" uid="uid://h5hg3ygx0nem" path="res://src/ui_components/base/custom_tab_container/custom_tab_container.gd" id="1_d7sa5"]
[ext_resource type="Script" uid="uid://cnyyowwlb04kl" path="res://src/ui_components/base/defaults/default_button.gd" id="2_kx3tm"]

[sub_resource type="InputEventJoypadButton" id="InputEventJoypadButton_vhcpw"]
button_index = 9
pressed = true

[sub_resource type="InputEventJoypadButton" id="InputEventJoypadButton_qfq5t"]
button_index = 10
pressed = true

[node name="CustomTabContainer" type="VBoxContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_d7sa5")

[node name="ButtonsBar" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="Prev" type="Button" parent="ButtonsBar"]
layout_mode = 2
text = "<"
script = ExtResource("2_kx3tm")
joypad_button_event = SubResource("InputEventJoypadButton_vhcpw")
metadata/_custom_type_script = "uid://cnyyowwlb04kl"

[node name="Buttons" type="HBoxContainer" parent="ButtonsBar"]
unique_name_in_owner = true
layout_mode = 2

[node name="Next" type="Button" parent="ButtonsBar"]
layout_mode = 2
text = ">"
script = ExtResource("2_kx3tm")
joypad_button_event = SubResource("InputEventJoypadButton_qfq5t")
metadata/_custom_type_script = "uid://cnyyowwlb04kl"

[node name="Content" type="Control" parent="."]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3

[node name="Test1" type="Label" parent="Content"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0
text = "1"

[node name="Test2" type="Label" parent="Content"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0
text = "2"

[node name="Test3" type="Label" parent="Content"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0
text = "v"

[node name="Test4" type="Label" parent="Content"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0
text = "arstrast"

[node name="Test5" type="Label" parent="Content"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0
text = "cd"

[node name="Test6" type="Label" parent="Content"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0
text = "1"

[node name="Test7" type="Label" parent="Content"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0
text = "rad"

[node name="Test8" type="Label" parent="Content"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0
text = "arcd"

[node name="Test9" type="Label" parent="Content"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0
text = "1"

[connection signal="pressed" from="ButtonsBar/Prev" to="." method="_on_prev_pressed"]
[connection signal="pressed" from="ButtonsBar/Next" to="." method="_on_next_pressed"]
